Add annotations, add new interfaces for TextRecords, moved or renamed some classes, add or remove some methods